--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Dash-Template</title>
+  <title>Dashboard-Template</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,7 +16,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light" id="nav">
-    <a class="navbar-brand" href="#">Home</a>
+    <a class="navbar-brand" href="#"> Sales </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,10 +25,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Sales<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#"> Taxes <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Costs</a>
+          <a class="nav-link" href="#"> Costs </a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -52,25 +52,25 @@
   <section class="container-fluid" id="charts">
     <div class="row">
       <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_1" >
-        Belgium
+        Belgium - 2010
         <button class="button">UPDATE</button>
       </div>
       <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_2">
-        Netherlands
+        Netherlands - 2010 
         <button class="button">UPDATE</button>
       </div>
       <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_3">
-        Luxembourg
+        Luxembourg - 2010
         <button class="button">UPDATE</button>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 col-sm-12 bg-transparent dash" id="chart_4">
-        Germany
+        Germany - 2010
         <button class="button">UPDATE</button>
       </div>
       <div class="col-md-6 col-sm-12 bg-transparent dash" id="chart_5">
-        France
+        France - 2010
         <button class="button">UPDATE</button>
       </div>
     </div>
