--- a/luxembourg.html
+++ b/luxembourg.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Dashboard-Template</title>
+  <title>Luxembourg Data</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -52,25 +52,25 @@
   <section class="container-fluid" id="charts">
     <div class="row">
       <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_1" >
-        Belgium - 2010
+        Revenue - 2010
         <button class="button">UPDATE</button>
       </div>
       <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_2">
-        Netherlands - 2010 
+        Taxes - 2010 
         <button class="button">UPDATE</button>
       </div>
       <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_3">
-        Luxembourg - 2010
+        Net income - 2010
         <button class="button">UPDATE</button>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 col-sm-12 bg-transparent dash" id="chart_4">
-        Germany - 2010
+        Costs - 2010
         <button class="button">UPDATE</button>
       </div>
-      <div class="col-md-6 col-sm-12 bg-transparent dash" id="chart_5">
-        France - 2010
+      <div class="col-md-6 col-sm-12 bg-transparent dash" id="pie_chart_5">
+        Top Products - 2010
         <button class="button">UPDATE</button>
       </div>
     </div>
