--- a/europe.html
+++ b/europe.html
@@ -48,29 +48,8 @@
     </div>
   </nav>
 
-  <section class="container-fluid" id="charts">
-    <div class="row">
-      <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_1" >
-        Belgium - 2010
-        <button class="button">UPDATE</button>
-      </div>
-      <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_2">
-        Netherlands - 2010 
-        <button class="button">UPDATE</button>
-      </div>
-      <div class="col-md-4 col-sm-12 bg-transparent dash" id="chart_3">
-        Luxembourg - 2010
-        <button class="button">UPDATE</button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 col-sm-12 bg-transparent dash" id="chart_4">
-        Germany - 2010
-        <button class="button">UPDATE</button>
-      </div>
-      <div class="col-md-6 col-sm-12 bg-transparent dash" id="chart_5">
-        France - 2010
-        <button class="button">UPDATE</button>
+  <section class="container-fluid">
+      <div class="col-md-12 col-sm-12 bg-transparent dash" id="mapas">
       </div>
     </div>
 
@@ -91,7 +70,7 @@
   <script src="https://d3js.org/d3.v5.js"></script>
 
   <!-- MY JS -->
-  <script src="js/charts.js"></script>
+  <script src="js/map.js"></script>
 
 </body>
 
