--- a/luxembourg.html
+++ b/luxembourg.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Luxembourg Data</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -42,7 +41,7 @@
             <a class="dropdown-item" href="#">Germany</a>
             <a class="dropdown-item" href="#">France</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Europe</a>
+            <a class="dropdown-item" href="europe.html">Europe</a>
           </div>
         </li>
       </ul>
@@ -69,7 +68,7 @@
         Costs - 2010
         <button class="button">UPDATE</button>
       </div>
-      <div class="col-md-6 col-sm-12 bg-transparent dash" id="pie_chart_5">
+      <div class="col-md-6 col-sm-12 bg-transparent dash" id="chart_5">
         Top Products - 2010
         <button class="button">UPDATE</button>
       </div>
