--- a/europe.html
+++ b/europe.html
@@ -49,7 +49,7 @@
   </nav>
 
   <section class="container-fluid">
-      <div class="col-md-12 col-sm-12 bg-transparent dash" id="mapas">
+      <div id="mapas">
       </div>
     </div>
 
